# x-info-generators

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  games.html  index.html  pyproject.toml  videos.html
games/Beneath a Steel Sky/: 00_GAME_INFO.html
games/Cannon Fodder/: 00_GAME_INFO.html
games/Chessmaster 9000/: 00_GAME_INFO.html
games/Earthworm Jim/: 00_GAME_INFO.html
games/Earthworm Jim 2/: 00_GAME_INFO.html
games/Forza Horizon 5/: 00_GAME_INFO.html
games/Forza Horizon 6/: 00_GAME_INFO.html
games/GRIP/: 00_GAME_INFO.html
games/GigaBash/: 00_GAME_INFO.html
games/Indiana Jones and the Last Crusade/: 00_GAME_INFO.html
games/Monkey Island 2 - LeChuck's Revenge/: 00_GAME_INFO.html
games/Retro City Rampage/: 00_GAME_INFO.html
games/SUPER BOMBERMAN COLLECTION/: 00_GAME_INFO.html
games/Split Second/: 00_GAME_INFO.html
games/Stray/: 00_GAME_INFO.html
games/TRON - Catalyst/: 00_GAME_INFO.html
games/Terminator 2D - NO FATE/: 00_GAME_INFO.html
games/Thimbleweed Park/: 00_GAME_INFO.html
games/Worms W.M.D/: 00_GAME_INFO.html
orig/: game_info_generator.py  movie_info_generator.py
src/x_info_generators/: __init__.py  cache.py  cli.py  display.py  http.py  images.py  index.py  processing.py  templates.py  utils.py
src/x_info_generators/game/: cli.py  (+2 more)
videos/American Dad/: American Dad.html
videos/Europe in 8 Bits (2013)/: Europe in 8 Bits (2013).html
videos/Family Guy/: Family Guy.html
videos/First Men in the Moon (1964)/: First Men in the Moon (1964).html
videos/Mars Attacks (1996)/: Mars Attacks (1996).html
videos/On a vole la cuisse de Jupiter (1980)/: On a vole la cuisse de Jupiter (1980).html
videos/Peru, tesoro escondido (2017)/: Peru, tesoro escondido (2017).html
(+19 files in other folders)
