[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-info-generators"
version = "1.3.0"
description = "Generate self-contained HTML info pages for games, movies and TV series"
readme = "README.md"
license = "WTFPL"
license-files = ["LICENSE"]
authors = [{ name = "Jan Roudaut" }]
keywords = ["html", "catalog", "metadata", "steam", "imdb", "metacritic", "tvmaze", "games", "movies", "tv-series", "offline"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "lxml",
    "tqdm",
    "wikipedia",
    "ffmpeg-python",
    "jinja2",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/janroudaut/x-info-generators"
Repository = "https://github.com/janroudaut/x-info-generators"
Issues = "https://github.com/janroudaut/x-info-generators/issues"

[project.scripts]
gen-video-info = "x_info_generators.video.cli:main"
gen-game-info = "x_info_generators.game.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/x_info_generators"]
